--- a/restrito.css
+++ b/restrito.css
@@ -38,3 +38,19 @@ hr{
   background:white;
   border:2px solid #ccc;
 }
+.not{
+  width:100%;
+  height:30px;
+  background:green;
+  color:white;
+  font-family:'Arial';
+  text-align:center;
+  font-size:20px;
+  margin-top:1px;
+}
+.not-icon{
+  font-family:'icon';
+  margin-left:200px;
+  position:absolute;
+  margin-top:5px;
+}
